# vnutrition

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  V_Nutrition_🥦.py  config.py  dockerfile  main_apports.py  pyproject.toml  requirements.txt  tox.ini
apport/: README.md  apports.py
data/apport/: apport.ods  apport_allaitement.csv  apport_enfant.csv  apport_femme.csv  apport_grossesse.csv  apport_homme.csv
intake/: intake.py  view.py
pages/: 1_🍽️_Intake.py  2_📊_Foodfact.py  README.md
pages/foodfact/: config.py  main_content.py  model.py
pages/intake/: main_content.py  model.py  sidebar.py  view.py
tests/data/apport/: apport_test.csv
tests/tests_intake/: test_intake.py
tests/tests_tools/: test_format_data.py
tools/: data_infos.py  format_data.py  view.py
